# xupg-rs

./: Cargo.toml  README.md
api/: releases.json
src/: main.rs
src/commands/: list.rs  mod.rs  php.rs  phpmyadmin.rs  xampp.rs
src/helpers/: api.rs  file.rs  mod.rs  package.rs
