[package]
name = "xupg-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xupg"
path = "src/main.rs"

[dependencies]
cached = "0.53.1"
colored = "2.1.0"
dirs-next = "2.0.0"
fli = "0.0.8"
indicatif = "0.17.8"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
zip = "2.1.6"
